--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     />
   </head>
   <body>
+    <h1>Hello world</h1>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
     <include src="./partials/header-library.html"></include>
