--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
     <include src="./partials/header-library.html"></include>
-    <section class="movie-gallary movie-gallary-js"></section>
+    <section class="movie-gallery movie-gallery-js">
+    
+    </section>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-movie-card.html"></include>
     <include src="./partials/modal-team-list.html"></include>
