--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,9 @@
     <include src="./partials/header.html"></include>
     <include src="./partials/header-library.html"></include>
     <section class="movie-gallery movie-gallery-js">
-    
+    <div class="container">
+    <ul class="gallery-list list"></ul>
+    </div>
     </section>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-movie-card.html"></include>
