--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,11 @@
     <include src="./partials/modal-movie-card.html"></include>
     <include src="./partials/modal-team-list.html"></include>
 
-    <div class="test"></div>
+    <!-- для теста buttonScrollUp, пока нет галереи -->
+    <!-- <div class="test"></div>
     <div class="test2"></div>
     <div class="test"></div>
-    <div class="test2"></div>
+    <div class="test2"></div> -->
     <script src="./index.js"></script>
   </body>
 </html>
