--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,12 @@
     <!-- <div class="test"></div>
     <div class="test2"></div>
     <div class="test"></div>
+    <div class="test2"></div>
+    <div class="test"></div>
+    <div class="test2"></div>
+    <div class="test"></div>
+    <div class="test2"></div>
+    <div class="test"></div>
     <div class="test2"></div> -->
     <script src="./index.js"></script>
   </body>
