--- a/src/index.html
+++ b/src/index.html
@@ -25,18 +25,9 @@
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-movie-card.html"></include>
     <include src="./partials/modal-team-list.html"></include>
+    <include src="./partials/modal-team-list.html"></include>
+    <include src="./partials/buttonScrollUp.html"></include>
 
-    <!-- для теста buttonScrollUp, пока нет галереи -->
-    <!-- <div class="test"></div>
-    <div class="test2"></div>
-    <div class="test"></div>
-    <div class="test2"></div>
-    <div class="test"></div>
-    <div class="test2"></div>
-    <div class="test"></div>
-    <div class="test2"></div>
-    <div class="test"></div>
-    <div class="test2"></div> -->
     <script src="./index.js"></script>
   </body>
 </html>
