--- a/src/index.html
+++ b/src/index.html
@@ -20,11 +20,12 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
+    <include src="./partials/spinner.html"></include>
     <include src="./partials/header-library.html"></include>
     <section class="movie-gallery movie-gallery-js">
-    <div class="container">
-    <ul class="gallery-list list"></ul>
-    </div>
+      <div class="container">
+        <ul class="gallery-list list"></ul>
+      </div>
     </section>
     <include src="./partials/footer.html"></include>
     <include src="./partials/modal-movie-card.html"></include>
