--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
     <include src="./partials/modal-movie-card.html"></include>
     <include src="./partials/modal-team-list.html"></include>
     <include src="./partials/buttonScrollUp.html"></include>
+    <include src="./partials/modal.html"></include>
 
     <script src="./index.js"></script>
   </body>
