--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <include src="./partials/header-library.html"></include>
     <section class="movie-gallery movie-gallery-js">
       <div class="container">
-        <ul class="gallery-list list"></ul>
+        <ul class="gallery-list list js-gallery-list"></ul>
       </div>
     </section>
     <include src="./partials/footer.html"></include>
