--- a/src/index.html
+++ b/src/index.html
@@ -25,11 +25,24 @@
       <include src="./partials/header-library.html"></include>
       <section class="movie-gallery movie-gallery-js">
         <div class="container">
-          <ul class="gallery-list list"></ul>
+          <ul class="gallery-list list">
+            <li class="gallery-items"></li>
+            <li class="gallery-items"></li>
+            <li class="gallery-items"></li>
+            <li class="gallery-items"></li>
+            <li class="gallery-items"></li>
+            <li class="gallery-items"></li>
+            <li class="gallery-items"></li>
+            <li class="gallery-items"></li>
+            <li class="gallery-items"></li>
+            <li class="gallery-items"></li>
+            <li class="gallery-items"></li>
+          </ul>
         </div>
       </section>
+      <include src="./partials/footer.html"></include>
     </div>
-    <include src="./partials/footer.html"></include>
+
     <include src="./partials/modal-movie-card.html"></include>
     <include src="./partials/modal-team-list.html"></include>
     <include src="./partials/buttonScrollUp.html"></include>
