--- a/src/index.html
+++ b/src/index.html
@@ -25,19 +25,7 @@
       <include src="./partials/header-library.html"></include>
       <section class="movie-gallery movie-gallery-js">
         <div class="container">
-          <ul class="gallery-list list">
-            <li class="gallery-items"></li>
-            <li class="gallery-items"></li>
-            <li class="gallery-items"></li>
-            <li class="gallery-items"></li>
-            <li class="gallery-items"></li>
-            <li class="gallery-items"></li>
-            <li class="gallery-items"></li>
-            <li class="gallery-items"></li>
-            <li class="gallery-items"></li>
-            <li class="gallery-items"></li>
-            <li class="gallery-items"></li>
-          </ul>
+          <ul class="gallery-list list"></ul>
         </div>
       </section>
       <include src="./partials/footer.html"></include>
