--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <div class="wrapper">
+      <include src="./partials/change-theme.html"></include>
       <include src="./partials/header.html"></include>
       <include src="./partials/spinner.html"></include>
       <include src="./partials/header-library.html"></include>
@@ -34,6 +35,7 @@
     <include src="./partials/modal-team-list.html"></include>
     <include src="./partials/buttonScrollUp.html"></include>
     <include src="./partials/modal.html"></include>
+    
 
     <script src="./index.js"></script>
   </body>
