--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,7 @@
     <div class="wrapper">
       <include src="./partials/header.html"></include>
       <include src="./partials/spinner.html"></include>
-      <include src="./partials/header-library.html"></include>
-      <section class="movie-gallery movie-gallery-js">
+      <section class="movie-gallery movie-gallery-js" data-page="trending">
         <div class="container">
           <ul class="gallery-list list js-gallery-list"></ul>
         </div>
