linked partial for trailer

--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
     <include src="./partials/modal-team-list.html"></include>
     <include src="./partials/buttonScrollUp.html"></include>
     <include src="./partials/modal.html"></include>
+    <include src="./partials/modal-trailer.html"></include>
 
     <script src="./index.js"></script>
   </body>
