--- a/src/index.html
+++ b/src/index.html
@@ -1,38 +1,36 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Заголовок страницы</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-      integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
-      crossorigin="anonymous"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
-    <div class="wrapper">
-      <include src="./partials/header.html"></include>
-      <include src="./partials/spinner.html"></include>
-      <section class="movie-gallery movie-gallery-js" data-page="trending">
-        <div class="container">
-          <ul class="gallery-list list js-gallery-list"></ul>
-        </div>
-      </section>
-      <include src="./partials/footer.html"></include>
-    </div>
-    <include src="./partials/modal-team-list.html"></include>
-    <include src="./partials/buttonScrollUp.html"></include>
-    <include src="./partials/modal.html"></include>
 
-    <script src="./index.js"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Заголовок страницы</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    integrity="sha512-ISS7cAi1PEhQ8jnbJpJZMd29NlhNj4AWYyLOSp2CE/CsHxTCu+r+t0D2yoJudVrd0/8fTVPUVDzY5Tvli75u/g=="
+    crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+</head>
+
+<body>
+  <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
+  <div class="wrapper">
+    <include src="./partials/header.html"></include>
+    <include src="./partials/spinner.html"></include>
+    <section class="movie-gallery movie-gallery-js" data-page="trending">
+      <div class="container">
+        <ul class="gallery-list list js-gallery-list"></ul>
+      </div>
+    </section>
+    <include src="./partials/footer.html"></include>
+  </div>
+  <include src="./partials/modal-team-list.html"></include>
+  <include src="./partials/buttonScrollUp.html"></include>
+  <include src="./partials/modal.html"></include>
+
+  <script src="./index.js"></script>
+</body>
+
 </html>
