--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
   <body>
     <!-- Так добавляются фрагменты в главные HTML-файлы страниц. -->
     <include src="./partials/header.html"></include>
-    <include src="./partials/filters.html"></include>
+    <!-- <include src="./partials/filters.html"></include> -->
     <main>
       <h1 class="visually-hidden">Movie library</h1>
       <section class="movie-gallery movie-gallery-js" data-page="trending">
